test: fix remaining 14 benchmark/stress-test files for Java 25 v6.0.0-GA
JMH @Fork JVM args (G1GC → ZGC + CompactObjectHeaders + VIRTUAL_TPE):
- WorkflowPatternBenchmarks: @Fork(3) → ZGC+CompactObjectHeaders+VIRTUAL_TPE
- Java25CompactHeadersBenchmark: replace G1GC comment placeholder with ZGC
- Java25RecordsBenchmark: remove G1GC+UseStringDeduplication, add ZGC+COH+VTPE, fix heap 1g/2g→2g/4g
- EventLoggerBenchmark: G1GC → ZGC+CompactObjectHeaders+VIRTUAL_TPE
- IOBoundBenchmark: bare heap → ZGC+CompactObjectHeaders+VIRTUAL_TPE
- InterfaceBClientBenchmark: G1GC → ZGC+CompactObjectHeaders+VIRTUAL_TPE
- IntegrationBenchmarks: G1GC → ZGC+VIRTUAL_TPE, @version 5.2→6.0
- NetworkTransportBenchmark: jvmArgsAppend+--enable-preview → jvmArgs+heap+ZGC+COH+VTPE
- MemoryUsageBenchmark: G1GC+-verbose:gc → ZGC+CompactObjectHeaders (no VTPE: memory benchmark), Xmx2g→4g

Add -Djmh.executor=VIRTUAL_TPE to already-ZGC benchmarks:
- ChaosEngineeringBenchmark, AdaptiveLoadBenchmark, PropertyBasedPerformanceBenchmark

Compilation error fix:
- WorkflowPatternBenchmarks.patternMemoryUsage(): void method had return statement;
  converted to Blackhole consumption pattern
- WorkflowPatternBenchmarks: remove JUnit 4 import (import static org.junit.Assert.*)

JUnit 3 → JUnit 5 conversion:
- LoadTestSuite: remove extends TestCase + constructor, add @BeforeEach/@AfterEach/@Test, @version 5.2→6.0
- A2ASkillBenchmark: remove extends TestCase + constructor, add @BeforeEach/@AfterEach/@Test (18 methods), @version 5.2→6.0

https://claude.ai/code/session_01MPhtf2RVDuKFdtg6B9QFjK